deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio-app
  labels:
    app: gradio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gradio-app
  template:
    metadata:
      labels:
        app: gradio-app
    spec:
      containers:
        - name: gradio-app
          image: docker.io/abhiabhi/gradio-app:latest
          ports:
            - containerPort: 3000
