service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradio-app-service
  labels:
    app: gradio-app
spec:
  selector:
    app: gradio-app
  ports:
    - name: 3000-tcp 
      protocol: TCP
      port: 3000
      targetPort: 3000
