route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gradio-app-route
spec:
  to:
    kind: Service
    name: gradio-app-service
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
